--- a/styles.css
+++ b/styles.css
@@ -55,3 +55,8 @@ body{
     background: rgb(215,208,198);
     background: linear-gradient(180deg, rgba(215,208,198,1) 0%, rgba(0,0,0,1) 47%, rgba(0,0,0,1) 100%);
 }
+
+.bookNowButton{
+    text-decoration: none;
+    text-align: center;
+}
