fixed hero image mobile visit page

--- a/styles.css
+++ b/styles.css
@@ -59,6 +59,7 @@
 .heroImg{
     background-image: url(images/factory-gate-large.jpg);
     background-size: cover;
+    background-position: center;
 }
 
 .storeImage{
